# SimpleAlignmentVST

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
